# exceptcxx

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  linux-build.yml  window_build.yml
cxxexcept/: Exception.cpp  Exception.hpp  IException.cpp  IException.h  InvalidPointerException.h  NotImplementedException.cpp  NotImplementedException.h  NotSupportedException.h  RuntimeException.h
include/Exception/: Exception.hpp  IException.h  InvalidArgumentException.h  PermissionDeniedException.h
src/exception/: IException.cpp  InvalidArgumentException.cpp  RunTimeException.cpp
test/: CMakeLists.txt  ExceptionUnitTests.cpp  execption.cpp  throwExecption.cpp
